parser/tests/bad/expr07.st
% operand of 'mod' operation must have type 'int'

const i := 5 mod 2.0
